# transfinite

./: LICENSE  README.markdown  transfinite.cabal
src/Data/Number/: TF.hs
